--- a/MiniProject3/MiniProject3/MiniProject3.csproj
+++ b/MiniProject3/MiniProject3/MiniProject3.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
     <Compile Include="GetClient.cs" />
     <Compile Include="Interfaces\IGetClient.cs" />
     <Compile Include="Interfaces\INode.cs" />
