--- a/MiniProject3/MiniProject3/MiniProject3.csproj
+++ b/MiniProject3/MiniProject3/MiniProject3.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PutClient.cs" />
+    <Compile Include="Listener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
