--- a/MiniProject3/MiniProject3/MiniProject3.csproj
+++ b/MiniProject3/MiniProject3/MiniProject3.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Interfaces\IGetClient.cs" />
     <Compile Include="Interfaces\INode.cs" />
     <Compile Include="Interfaces\IPutClient.cs" />
+    <Compile Include="Message\Message.cs" />
+    <Compile Include="Message\MessageType.cs" />
+    <Compile Include="Message\PutMessage.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
