--- a/MiniProject3/MiniProject3/MiniProject3.csproj
+++ b/MiniProject3/MiniProject3/MiniProject3.csproj
@@ -48,11 +48,11 @@
     <Compile Include="Interfaces\IGetClient.cs" />
     <Compile Include="Interfaces\INode.cs" />
     <Compile Include="Interfaces\IPutClient.cs" />
-    <Compile Include="Message\GetMessage.cs" />
-    <Compile Include="Message\JoinMessage.cs" />
-    <Compile Include="Message\Message.cs" />
-    <Compile Include="Message\MessageType.cs" />
-    <Compile Include="Message\PutMessage.cs" />
+    <Compile Include="MessageTypes\GetMessage.cs" />
+    <Compile Include="MessageTypes\JoinMessage.cs" />
+    <Compile Include="MessageTypes\Message.cs" />
+    <Compile Include="MessageTypes\MessageType.cs" />
+    <Compile Include="MessageTypes\PutMessage.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
