Tonights final comit, may god have mercy for our souls

--- a/MiniProject3/MiniProject3/MiniProject3.csproj
+++ b/MiniProject3/MiniProject3/MiniProject3.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PutClient.cs" />
     <Compile Include="Listener.cs" />
+    <Compile Include="Sender.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
